# workshop_engenharia_de_dados

./: Projeto.ipynb  README.md  bq.py  pyproject.toml
MYSQL/: makefile
SFTP/: docker-compose.yml  dockerfile  makefile
SFTP/docker/: init-sftp.sh
gerador_data_base/: gerador.py
